--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -2,11 +2,11 @@ version: 1
 packages:
   - path: "./db/sqlc"
     name: "db"
-    engine: "prostgres"
+    engine: "postgresql"
     schema: "./db/migration"
     queries: "./db/query"
     emit_json_tags: true
     emit_prepared_queries: false
     emit_interface: false
-    emit_exact_table_name: false
+    emit_exact_table_names: false
 
