--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -37,7 +37,10 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.18.1
-        
+    - name: Install golang-migrate
+      run: curl -L https://github.com/golang-migrate/migrate/releases/download/v4.14.1/migrate.linux-amd64.tar.gz | tar xvz
+           mv migrate.linux-amd64 $GOPATH/bin/migrate
+           
     - name: Run migration
       run: make migrateup
       
