--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -38,7 +38,7 @@ jobs:
       with:
         go-version: 1.18.1
     - name: Install golang-migrate
-      run: curl -L https://github.com/golang-migrate/migrate/releases/download/v4.14.1/migrate.linux-amd64.tar.gz | tar xvz
+      run: curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.darwin-amd64.tar.gz | tar xvz
            sudo mv migrate.linux-amd64 $GOPATH/bin/migrate
            
     - name: Run migration
