--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -38,9 +38,10 @@ jobs:
       with:
         go-version: 1.18.1
     - name: Install golang-migrate
-      run: curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.darwin-amd64.tar.gz | tar xvz
-           sudo mv migrate.linux-amd64 /usr/bin/migrate
-           which migrate
+      run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate.linux-amd64 /usr/bin/migrate
+          which migrate
            
     - name: Run migration
       run: make migrateup
