--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,19 +1,21 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: run test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
 
-  build:
+  test:
+    name : Test
     runs-on: ubuntu-latest
-     # Service containers to run with `container-job`
+
+      # Service containers to run with `container-job`
     services:
       # Label used to access the service container
       postgres:
@@ -21,9 +23,9 @@ jobs:
         image: postgres:12
         # Provide the password for postgres
         env:
-          POSTGRES_USER: root
           POSTGRES_PASSWORD: admin
-          POSTGRES_DB: bank
+          POSTGRES_USER : root
+          POSTGRES_DB : bank
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -32,22 +34,26 @@ jobs:
           --health-retries 5
         ports:
           # Maps tcp port 5432 on service container to the host
-          - 5432:543  
+          - 5432:5432
+
     steps:
-    - uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.18.1
-    - name: Install golang-migrate
+        go-version: 1.20.1
+      
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v3
+
+    - name : install migrate
       run: |
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
         sudo mv migrate /usr/bin/migrate
         which migrate
-           
-    - name: Run migration
-      run: make migrateup
-      
+
+    - name: migrateup
+      run : make migrateup
+
     - name: Test
-      run: make test
+      run: go test -v ./...
