--- a/app.env
+++ b/app.env
@@ -1,3 +1,5 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgres://root:admin@localhost:5432/bank?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8080
+JWT_KEY=mykeymykeymykeymykeymykeymykeymykeymykeymykey
+ACCESS_TOKEN_DURATION=15m
