ci: add role based auth

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy to production
 on:
   push:
     branches: [ "main" ]
- 
+
 jobs:
 
   test:
@@ -18,7 +18,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2 
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:user/github-ci
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ROLE_ID }}:role/github-ci
           aws-region: eu-north-1
 
       - name: Login to Amazon ECR
